--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="js/elementsBack.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/script.js"></script>
+<!--  <script src="scriptTest.js"></script>  -->
+<!--  <script src="test.js"></script>  -->
+<!--  <script src="scriptT.js"></script> 
+ --> 
+   <!--  <script src="allT.js"></script>  -->
     <title>Rick and Morty CV</title>
 </head>
 <body>
