--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="js/elementsGame.js"></script>
     <script src="js/elementsBack.js"></script>
     <script src="js/sprite.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/siteScript.js"></script>
 <!--  <script src="scriptTest.js"></script>  -->
 <!--  <script src="test.js"></script>  -->
 <!--  <script src="scriptT.js"></script> 
@@ -19,6 +21,7 @@
     <title>Rick and Morty CV</title>
 </head>
 <body>
+    <a id="pdfCv" href="cvRouzaudPierre.pdf" download style="display: none">salut salut</a>
     <div id="gameCV">
         <canvas id="gameBackGround" width="1000" height="700"></canvas>
         <canvas id="gameCanvas" width="1000" height="700"></canvas>
