add background site

--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
     <title>Rick and Morty CV</title>
 </head>
 <body>
-    <a id="pdfCv" href="cvRouzaudPierre.pdf" download style="display: none">salut salut</a>
-    <div id="gameCV">
-        <canvas id="gameBackGround" width="1000" height="700"></canvas>
-        <canvas id="gameCanvas" width="1000" height="700"></canvas>
-        <canvas id="gameUI" width="1000" height="700"></canvas>
+    <div id="menu">
+        <ul>
+            <li class="link-menu border-bottom">
+                <a class="border-left ">Github</a>
+            </li>
+            <li class="link-menu border-bottom">
+                <a class="border-left ">Download CV</a>
+            </li>
+        </ul>
+    </div>
+    <div id="main-page" class="background-cv">
+        <a id="pdf-cv" href="cvRouzaudPierre.pdf" download style="display: none">salut salut</a>
+        <div id="game-cv">
+            <canvas id="game-background" width="1000" height="700"></canvas>
+            <canvas id="game-canvas" width="1000" height="700"></canvas>
+            <canvas id="game-ui" width="1000" height="700"></canvas>
+        </div>
     </div>
 </body>
 </html>
