--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <canvas id="game-background" width="1000" height="700"></canvas>
             <canvas id="game-canvas" width="1000" height="700"></canvas>
             <canvas id="game-ui" width="1000" height="700"></canvas>
+            <div id="info-game">
+
+            </div>
         </div>
     </div>
 </body>
