add hover effect on cv and git btn

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 
 <body>
     <div id="main-page" class="background-cv">
-        <a class="triangle-git" href="https://github.com/Siglave/JeuCV" target="_blank">
+        <!-- <a class="triangle-git" href="https://github.com/Siglave/JeuCV" target="_blank">
+            <img class="img-git" src="assets/ui/github.png">
+        </a> -->
+        <a class="link link-git" href="https://github.com/Siglave/JeuCV" target="_blank">
             <img class="img-git" src="assets/ui/github.png">
         </a>
-        <a class="triangle-cv" href="cvRouzaudPierre.pdf" download>
+        <a class="link link-cv" href="cvRouzaudPierre.pdf" download>
             <img class="img-pdf" src="assets/ui/pdf.png">
         </a>
         <a id="pdf-cv" href="cvRouzaudPierre.pdf" download style="display: none"></a>
