refactor creation stage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/elementsGame.js"></script>
     <script src="js/elementsBack.js"></script>
     <script src="js/sprite.js"></script>
+    <script src="js/creationStages.js"></script>
     <script src="js/game.js"></script>
     <script src="js/script.js"></script>
     <script src="js/siteScript.js"></script>
