--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
 </head>
 
 <body>
-    <div id="main-page" class="background-cv">
-        <!-- <a class="triangle-git" href="https://github.com/Siglave/JeuCV" target="_blank">
-            <img class="img-git" src="assets/ui/github.png">
-        </a> -->
+    <div id="main-page" class="background-start">
         <a class="link link-git" href="https://github.com/Siglave/JeuCV" target="_blank">
             <img class="img-git" src="assets/ui/github.png">
         </a>
         <a class="link link-cv" href="cvRouzaudPierre.pdf" download>
             <img class="img-pdf" src="assets/ui/pdf.png">
         </a>
+        <h1 style="margin: 0; color: #065488;">CV Rouzaud Pierre</h1>
         <a id="pdf-cv" href="cvRouzaudPierre.pdf" download style="display: none"></a>
-        <button id="start-game" class="btn-5" type="button">Start Game</button>
+        <button id="start-game" class="btn-5" type="button">Decouvrire le CV</button>
         <div id="game-cv">
             <canvas id="game-background" width="1000" height="700"></canvas>
             <canvas id="game-canvas" width="1000" height="700"></canvas>
