--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
         <a class="link link-git" href="https://github.com/Siglave/JeuCV" target="_blank">
             <img class="img-git" src="assets/ui/github.png">
         </a>
-        <a class="link link-cv" href="cvRouzaudPierre.pdf" download>
+        <a class="link link-cv" href="rouzaudPierreDevJs.pdf" download>
             <img class="img-pdf" src="assets/ui/pdf.png">
         </a>
-        <h1 style="margin: 0; color: #065488;">CV Rouzaud Pierre</h1>
-        <a id="pdf-cv" href="cvRouzaudPierre.pdf" download style="display: none"></a>
-        <button id="start-game" class="btn-5" type="button">Decouvrire le CV</button>
+        <div id="first-page">
+            <h1 style="margin: 0; color: #065488;">Développeur Full Stack JS</h1>
+            <h1 style="margin: 0; color: #065488;">Rouzaud Pierre</h1>
+            <button id="start-game" type="button">Découvrire le CV</button>
+        </div>
+        <a id="pdf-cv" href="rouzaudPierreDevJs.pdf" download style="display: none"></a>
         <div id="game-cv">
             <canvas id="game-background" width="1000" height="700"></canvas>
             <canvas id="game-canvas" width="1000" height="700"></canvas>
