--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/utilityCanvas.js"></script>
     <script src="js/elementsUi.js"></script>
     <script src="js/elementsGame.js"></script>
@@ -16,21 +16,17 @@
     <script src="js/game.js"></script>
     <script src="js/script.js"></script>
     <script src="js/siteScript.js"></script>
-    <!--  <script src="scriptTest.js"></script>  -->
-    <!--  <script src="test.js"></script>  -->
-    <!--  <script src="scriptT.js"></script> 
- -->
     <!--  <script src="allT.js"></script>  -->
-    <title>Rick and Morty CV</title>
+    <title>Rouzaud Pierre CV</title>
 </head>
 
 <body>
     <div id="main-page" class="background-start">
         <a class="link link-git" href="https://github.com/Siglave/JeuCV" target="_blank">
-            <img class="img-git" src="assets/ui/github.png">
+            <img class="img-git" src="assets/ui/github.png" alt="Icon github">
         </a>
         <a class="link link-cv" href="rouzaudPierreDevJs.pdf" download>
-            <img class="img-pdf" src="assets/ui/pdf.png">
+            <img class="img-pdf" src="assets/ui/pdf.png" alt="Icon pdf">
         </a>
         <div id="first-page">
             <h1 style="margin: 0; color: #065488;">Développeur Full Stack JS</h1>
@@ -42,7 +38,7 @@
             <canvas id="game-background" width="1000" height="700"></canvas>
             <canvas id="game-canvas" width="1000" height="700"></canvas>
             <canvas id="game-ui" width="1000" height="700"></canvas>
-            <div id="info-game" width="1000" height="700">
+            <div id="info-game">
                 <div id="stage-one">
                     <div class="block-info-stage">
                         <p class="title-info">Info Niveau : </p>
@@ -145,7 +141,8 @@
                     <div class="block-info-stage">
                         <p class="title-info">Bravo !</p>
                         <p>Maintenant tu peux telecharger mon cv en passant sous le
-                            texte.</p>
+                            texte.
+                        </p>
                     </div>
                     <div class="block-ctrl">
                         <p class="title-info">Controles : </p>
