--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <script src="lib/jquery.min.js"></script>
-    <script src="js/utilityCanvas.js"></script>
-    <script src="js/elementsUi.js"></script>
-    <script src="js/elementsGame.js"></script>
-    <script src="js/elementsBack.js"></script>
-    <script src="js/sprite.js"></script>
-    <script src="js/creationStages.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/siteScript.js"></script>
-    <!--  <script src="allT.js"></script>  -->
+    <script src="src/bundle.js"></script> 
     <title>Rouzaud Pierre CV</title>
 </head>
 
@@ -59,7 +50,7 @@
                     <div class="block-info-stage">
                         <p class="title-info">Info Niveau : </p>
                         <p>
-                            Attrape 50pts de competences, Attention aux Bombes !
+                            Attrape 50pts de compétences, Attention aux bombes !
                         </p>
                         <p>
                             <img class="icon-ctrl icon-skill" src="assets/skills/html.png" alt="html">
@@ -139,7 +130,7 @@
                 <div id="stage-five">
                     <div class="block-info-stage">
                         <p class="title-info">Bravo !</p>
-                        <p>Maintenant tu peux telecharger mon cv en passant sous le
+                        <p>Maintenant tu peux télécharger mon cv en passant sous le
                             texte.
                         </p>
                     </div>
