--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="first-page">
             <h1 style="margin: 0; color: #065488;">Développeur Full Stack JS</h1>
             <h1 style="margin: 0; color: #065488;">Rouzaud Pierre</h1>
-            <button id="start-game" type="button">Découvrire le CV</button>
+            <button id="start-game" type="button">Découvrir le CV</button>
         </div>
         <div id="game-cv">
             <canvas id="game-background" width="1000" height="700"></canvas>
